# zendesk-mcp-server

./: PUBLISH.md  pyproject.toml
npm/: package.json
src/zendesk_mcp_server/: server.py
