[project]
name = "zendesk-mcp-server"
version = "0.1.1"
description = "A simple Zendesk MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.2",
    "python-dotenv>=1.0.1",
    "zenpy>=2.0.56",
    "cachetools>=5.0.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
zendesk-mcp-server = "zendesk_mcp_server:main"
